--- a/jack_harvey.ipynb
+++ b/jack_harvey.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 568,
    "metadata": {},
    "outputs": [
     {
@@ -493,39 +493,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>County/State</th>\n",
-       "      <th>CLF 2007</th>\n",
        "      <th>Emp 2007</th>\n",
-       "      <th>Unemp 2007</th>\n",
-       "      <th>Unemp Rate 2007</th>\n",
-       "      <th>CLF 2008</th>\n",
        "      <th>Emp 2008</th>\n",
-       "      <th>Unemp 2008</th>\n",
-       "      <th>Unemp Rate 2008</th>\n",
-       "      <th>CLF 2009</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Unemp 2016</th>\n",
-       "      <th>Unemp Rate 2016</th>\n",
-       "      <th>CLF 2017</th>\n",
+       "      <th>Emp 2009</th>\n",
+       "      <th>Emp 2010</th>\n",
+       "      <th>Emp 2011</th>\n",
+       "      <th>Emp 2012</th>\n",
+       "      <th>Emp 2013</th>\n",
+       "      <th>Emp 2014</th>\n",
+       "      <th>Emp 2015</th>\n",
+       "      <th>Emp 2016</th>\n",
        "      <th>Emp 2017</th>\n",
-       "      <th>Unemp 2017</th>\n",
-       "      <th>Unemp Rate 2017</th>\n",
-       "      <th>CLF 2018</th>\n",
        "      <th>Emp 2018</th>\n",
-       "      <th>Unemp 2018</th>\n",
-       "      <th>Unemp Rate 2018</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>State</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -543,62 +525,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>US</th>\n",
-       "      <td>United States</td>\n",
-       "      <td>152,191,093</td>\n",
        "      <td>145,156,134</td>\n",
-       "      <td>7,034,959</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>153761095</td>\n",
        "      <td>144860350</td>\n",
-       "      <td>8900745</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>153,825,455</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7,727,644</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>160,273,906</td>\n",
+       "      <td>139,594,698</td>\n",
+       "      <td>139,408,204</td>\n",
+       "      <td>140,765,809</td>\n",
+       "      <td>142,600,402</td>\n",
+       "      <td>144,018,151</td>\n",
+       "      <td>146,338,305</td>\n",
+       "      <td>148,579,026</td>\n",
+       "      <td>150,981,151</td>\n",
        "      <td>153,293,830</td>\n",
-       "      <td>6,980,076</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>161,640,488</td>\n",
        "      <td>155,344,043</td>\n",
-       "      <td>6,296,445</td>\n",
-       "      <td>3.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 49 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        County/State     CLF 2007     Emp 2007 Unemp 2007 Unemp Rate 2007  \\\n",
-       "State                                                                       \n",
-       "US     United States  152,191,093  145,156,134  7,034,959             4.6   \n",
+       "          Emp 2007   Emp 2008     Emp 2009     Emp 2010     Emp 2011  \\\n",
+       "State                                                                  \n",
+       "US     145,156,134  144860350  139,594,698  139,408,204  140,765,809   \n",
        "\n",
-       "        CLF 2008   Emp 2008 Unemp 2008 Unemp Rate 2008     CLF 2009  ...  \\\n",
-       "State                                                                ...   \n",
-       "US     153761095  144860350    8900745             5.8  153,825,455  ...   \n",
+       "          Emp 2012     Emp 2013     Emp 2014     Emp 2015     Emp 2016  \\\n",
+       "State                                                                    \n",
+       "US     142,600,402  144,018,151  146,338,305  148,579,026  150,981,151   \n",
        "\n",
-       "      Unemp 2016 Unemp Rate 2016     CLF 2017     Emp 2017 Unemp 2017  \\\n",
-       "State                                                                   \n",
-       "US     7,727,644             4.9  160,273,906  153,293,830  6,980,076   \n",
-       "\n",
-       "      Unemp Rate 2017     CLF 2018     Emp 2018 Unemp 2018 Unemp Rate 2018  \n",
-       "State                                                                       \n",
-       "US                4.4  161,640,488  155,344,043  6,296,445             3.9  \n",
-       "\n",
-       "[1 rows x 49 columns]"
+       "          Emp 2017     Emp 2018  \n",
+       "State                            \n",
+       "US     153,293,830  155,344,043  "
       ]
      },
-     "execution_count": 403,
+     "execution_count": 568,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def us_employment(source):\n",
+    "    return source[[\"Emp 2007\", \"Emp 2008\", 'Emp 2009',\"Emp 2010\", \"Emp 2011\", 'Emp 2012',\"Emp 2013\", \"Emp 2014\", 'Emp 2015',\"Emp 2016\", \"Emp 2017\", 'Emp 2018']]\n",
     "us_data = employment_data_only.iloc[:1]\n",
     "#us_data = employment_data_only.loc[\"US\"]\n",
-    "us_data"
+    "us_employment(us_data)"
    ]
   },
   {
@@ -658,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 566,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +644,7 @@
       "\u001b[0;31mKeyError\u001b[0m: 'counties'",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-565-87910cef4fb9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0memployment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mus_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-566-87910cef4fb9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0memployment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mus_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m<ipython-input-458-735c20bc6099>\u001b[0m in \u001b[0;36memployment\u001b[0;34m(source)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0memployment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mcounties\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'counties'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"County/State\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mcounties\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Emp 2007\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Emp 2008\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Emp 2009'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"Emp 2010\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Emp 2011\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Emp 2012'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"Emp 2013\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Emp 2014\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Emp 2015'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"Emp 2016\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Emp 2017\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Emp 2018'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2993\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2994\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2995\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2996\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2997\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2897\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2898\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2899\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_maybe_cast_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2900\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2901\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -688,9 +656,7 @@
      ]
     }
    ],
-   "source": [
-    "employment(us_data)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
