--- a/main_script.ipynb
+++ b/main_script.ipynb
@@ -26,6 +26,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Cleaning DataFrame\n",
+    "## Renaming Columns\n",
+    "# Dropping data not needed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -265,7 +276,7 @@
        "[5 rows x 51 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Changing data strings to floats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Creating Lists to be iterated through for each state and each year involved in study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Seperating Data into only U.S. Unemployment Rates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +363,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Locating Data on specific States"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Seperating Data by state and Unemployment Rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## collecting data on each state and creating a data frame on only states information\n",
+    "# deleting county information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +645,7 @@
        "[5 rows x 49 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +664,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Locating only unemployment rate for each state\n",
+    "# Creating a new data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +833,7 @@
        "CA                 6.2              5.5              4.8              4.2  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +894,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Seperating median house price by year for each state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,21 +914,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "## Locating only house price data on specific state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Median House Price 2007</th>\n",
+       "      <th>Median House Price 2008</th>\n",
+       "      <th>Median House Price 2009</th>\n",
+       "      <th>Median House Price 2010</th>\n",
+       "      <th>Median House Price 2011</th>\n",
+       "      <th>Median House Price 2012</th>\n",
+       "      <th>Median House Price 2013</th>\n",
+       "      <th>Median House Price 2014</th>\n",
+       "      <th>Median House Price 2015</th>\n",
+       "      <th>Median House Price 2016</th>\n",
+       "      <th>Median House Price 2017</th>\n",
+       "      <th>Median House Price 2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AL</th>\n",
+       "      <td>296060</td>\n",
+       "      <td>305180</td>\n",
+       "      <td>305450</td>\n",
+       "      <td>289780</td>\n",
+       "      <td>279240</td>\n",
+       "      <td>277120</td>\n",
+       "      <td>274880</td>\n",
+       "      <td>275520</td>\n",
+       "      <td>284250</td>\n",
+       "      <td>290090</td>\n",
+       "      <td>299640</td>\n",
+       "      <td>311320</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Median House Price 2007  Median House Price 2008  \\\n",
+       "State                                                     \n",
+       "AL                      296060                   305180   \n",
+       "\n",
+       "       Median House Price 2009  Median House Price 2010  \\\n",
+       "State                                                     \n",
+       "AL                      305450                   289780   \n",
+       "\n",
+       "       Median House Price 2011  Median House Price 2012  \\\n",
+       "State                                                     \n",
+       "AL                      279240                   277120   \n",
+       "\n",
+       "       Median House Price 2013  Median House Price 2014  \\\n",
+       "State                                                     \n",
+       "AL                      274880                   275520   \n",
+       "\n",
+       "       Median House Price 2015  Median House Price 2016  \\\n",
+       "State                                                     \n",
+       "AL                      284250                   290090   \n",
+       "\n",
+       "       Median House Price 2017  Median House Price 2018  \n",
+       "State                                                    \n",
+       "AL                      299640                   311320  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "state_price_house = []\n",
     "states_house_price = {}\n",
     "for state in states:\n",
     "    states_house_price[state] = {\n",
     "        'house_price': state_house_price(state)\n",
-    "    }"
+    "    }\n",
+    "states_house_price['Alabama']['house_price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## function for finding linear regession "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +1060,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## bin states by size of CLF and finding the unemployment rate for each bin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +1080,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## function to bin states by CFL size and finding the median house price for each year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +1100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## binning states by size of CLF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1383,7 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1480,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## binning states by size of CLF and comparing house price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1672,7 @@
        "Maine                      498550                   523320  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1689,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## binning states by starting median house price in 2007"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1537,7 +1787,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## binning states by price of home in 2007 then comparing the unemployment rate of those states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1615,6 +1874,15 @@
     "plt.xlabel(\"Year\")\n",
     "plt.grid()\n",
     "plt.savefig(r'unemp_by_house_price_5m')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## identifying which states to loop through and create graphics "
    ]
   },
   {
